--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,16 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://kit-pro.fontawesome.com/releases/v5.15.3/css/pro.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
 		<title>NFT Preview Card</title>
 	</head>
 	<body>
